--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/hamzaatalif/scrape-emails/issues"
   },
-  "homepage": "https://github.com/hamzaatalif/scrape-emails#readme"
+  "homepage": "https://github.com/hamzaatalif/scrape-emails#readme",
+  "dependencies": {
+    "axios": "^0.24.0",
+    "cheerio": "^1.0.0-rc.10",
+    "express": "^4.17.1"
+  }
 }
